2007-02-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Add "on the client" message.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: fix for chunk and displayunit.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix if krb4 is compiled but another auth is
			       used.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloc.c (safe_env): Remove LANG and LC_* only if we are
					 priviledged process.

2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* dumper-src/amgtar.pl.in: Replace -t options by -T.
	* dumper-src/Makefile.am: Remove perl -t options.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (STANDARD_COMMON_STUFF_NOT_FILE): Add sl.
	* common-src/statfs.c: Fix scale function.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix PARAM_HONOR_NODUMP.

2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Fix postscript crash.

2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-manual.sh.in: Add tty, email, tty_email request mode.

2007-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Use dbfd.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloc.c (vstrallocf): New function.
	* common-src/amanda.h (vstrallocf): Prototype.
	* client-src/sendsize.c: Send error if fe_rep_sendsize_quoted_error.
	* common-src/amfeatures.c (am_init_feature_set): Set
						 fe_rep_sendsize_quoted_error.
	* common-src/amfeatures.h (fe_rep_sendsize_quoted_error): new features.
	* server-src/planner.c: Receive error message from sendsize.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, changer-src/scsi-linux.c,
	  common-src/conffile.c, configure.in,
	  man/Makefile.am, man/xml-source/amcheck.8.xml,