@@ -79,6 +79,7 @@ extern void list_host(void);
 extern void set_host(const char *host);
 extern int set_date(char *date);
 extern void set_directory(char *dir);
+extern void local_cd(char *dir);
 extern void cd_glob(char *dir);
 extern void cd_regex(char *dir);
 extern void cd_dir(char *dir, char *default_dir);
